docs: expand README with AWS observability and chaos experiment details, including architecture, settings, and observations